fix(sidebar):fix truncation for iteration and focus css

--- a/src/app/components/iterations-panel/iterations-panel.component.less
+++ b/src/app/components/iterations-panel/iterations-panel.component.less
@@ -36,5 +36,8 @@
     .fa {
       width: 15px;
     }
+    &:focus {
+      outline: none;
+    }
   }
 }
